completed with 24 hours time. Issues in shifting from 12 hours to 24 hours. Currently commented toggle.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -348,6 +348,11 @@
     }
 }
 
+.hide-control {
+    display: none !important;
+    z-index: -1;
+}
+
 select {
     background: white;
     padding: 5px;
